force-app/main/default/objects/Sales_Debrief__c/fields/Time_period_network_discount_assessment__c.field-meta.xml
<CustomField>
    <fullName>Time_period_network_discount_assessment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time period network discount assessment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>