force-app/main/default/objects/Sales_Debrief__c/fields/Top_Rx_Competitor_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Top_Rx_Competitor_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Top Rx Competitor - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>