force-app/main/default/objects/Sales_Debrief__c/fields/Top_Vision_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Top_Vision_Competitor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Top Vision Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>