force-app/main/default/objects/Sales_Debrief__c/fields/Type_analysis_assessment_cost_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Type_analysis_assessment_cost_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type analysis assessment cost - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>