force-app/main/default/objects/Sales_Debrief__c/fields/Type_of_analysis_assessment_of_cost__c.field-meta.xml
<CustomField>
    <fullName>Type_of_analysis_assessment_of_cost__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type of analysis assessment of cost</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>