force-app/main/default/objects/Sales_Debrief__c/fields/UHC_Brand_Perception_Change_During_RFP__c.field-meta.xml
<CustomField>
    <fullName>UHC_Brand_Perception_Change_During_RFP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHC Brand Perception Change During RFP</label>
    <type>TextArea</type>
</CustomField>