force-app/main/default/objects/Sales_Debrief__c/fields/UHC_discount_cost_differential_vs_winner__c.field-meta.xml
<CustomField>
    <fullName>UHC_discount_cost_differential_vs_winner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHC discount cost differential vs winner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>