force-app/main/default/objects/Sales_Debrief__c/fields/UHC_Innovation_Capability__c.field-meta.xml
<CustomField>
    <fullName>UHC_Innovation_Capability__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHC&apos;s Innovation Capability</label>
    <type>TextArea</type>
</CustomField>