force-app/main/default/objects/Sales_Debrief__c/fields/UHC_needed_to_win_deal_Write_In__c.field-meta.xml
<CustomField>
    <fullName>UHC_needed_to_win_deal_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHC needed to win deal - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>