force-app/main/default/objects/Sales_Debrief__c/fields/UHC_Network_Negotiations_Impact__c.field-meta.xml
<CustomField>
    <fullName>UHC_Network_Negotiations_Impact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHC Network Negotiations Impact</label>
    <type>TextArea</type>
</CustomField>