force-app/main/default/objects/Sales_Debrief__c/fields/UMR_platform_proposal_Write_In__c.field-meta.xml
<CustomField>
    <fullName>UMR_platform_proposal_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UMR platform proposal - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>