force-app/main/default/objects/Sales_Debrief__c/fields/Value_Story_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Value_Story_Commitment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value Story Commitment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>