force-app/main/default/objects/Sales_Debrief__c/fields/Value_Story_Consultant_Employer_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Value_Story_Consultant_Employer_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value Story Consultant Employer Write In</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>