force-app/main/default/objects/Sales_Debrief__c/fields/Value_Story_Resonate__c.field-meta.xml
<CustomField>
    <fullName>Value_Story_Resonate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value Story Resonate</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>