force-app/main/default/objects/Sales_Debrief__c/fields/Value_Story_Strategic_Topics__c.field-meta.xml
<CustomField>
    <fullName>Value_Story_Strategic_Topics__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value Story Strategic Topics</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>