force-app/main/default/objects/Sales_Debrief__c/fields/Vision_ASO_fees_compare__c.field-meta.xml
<CustomField>
    <fullName>Vision_ASO_fees_compare__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vision ASO fees compare</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>