force-app/main/default/objects/Sales_Debrief__c/fields/Vision_cost_differences__c.field-meta.xml
<CustomField>
    <fullName>Vision_cost_differences__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vision cost differences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>