force-app/main/default/objects/Sales_Debrief__c/fields/Vision_Credits__c.field-meta.xml
<CustomField>
    <fullName>Vision_Credits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vision Credits</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>