force-app/main/default/objects/Sales_Debrief__c/fields/Vision_factors_outcome_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Vision_factors_outcome_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vision factors outcome Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>