force-app/main/default/objects/Sales_Debrief__c/fields/Vision_FI_Premium_winner__c.field-meta.xml
<CustomField>
    <fullName>Vision_FI_Premium_winner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vision FI Premium winner</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>