force-app/main/default/objects/Sales_Debrief__c/fields/Vision_funding_type__c.field-meta.xml
<CustomField>
    <fullName>Vision_funding_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vision funding type</label>
    <type>TextArea</type>
</CustomField>