force-app/main/default/objects/Sales_Debrief__c/fields/Vision_Implementation_Credit__c.field-meta.xml
<CustomField>
    <fullName>Vision_Implementation_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vision Implementation Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>