force-app/main/default/objects/Sales_Debrief__c/fields/Vision_Package_Savings__c.field-meta.xml
<CustomField>
    <fullName>Vision_Package_Savings__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vision Package Savings</label>
    <length>10</length>
    <type>Text</type>
</CustomField>