force-app/main/default/objects/Sales_Debrief__c/fields/Vision_Package_Savings_Credit__c.field-meta.xml
<CustomField>
    <fullName>Vision_Package_Savings_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vision Package Savings Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>