force-app/main/default/objects/Sales_Debrief__c/fields/Vision_Performance_Guarantees__c.field-meta.xml
<CustomField>
    <fullName>Vision_Performance_Guarantees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vision Performance Guarantees</label>
    <length>10</length>
    <type>Text</type>
</CustomField>