force-app/main/default/objects/Sales_Debrief__c/fields/Vision_Total_Cost_of_Care_Guarantees__c.field-meta.xml
<CustomField>
    <fullName>Vision_Total_Cost_of_Care_Guarantees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vision Total Cost of Care Guarantees</label>
    <length>10</length>
    <type>Text</type>
</CustomField>