force-app/main/default/objects/Sales_Debrief__c/fields/What_prompted_UMR_platform_proposal__c.field-meta.xml
<CustomField>
    <fullName>What_prompted_UMR_platform_proposal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What prompted UMR platform proposal</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>