force-app/main/default/objects/Sales_Debrief__c/recordTypes/Comprehensive_Medical.recordType-meta.xml
<RecordType>
    <fullName>Comprehensive_Medical</fullName>
    <active>true</active>
    <label>Comprehensive Medical</label>
</RecordType>