force-app/main/default/objects/Sales_Debrief__c/recordTypes/Specialty_Only.recordType-meta.xml
<RecordType>
    <fullName>Specialty_Only</fullName>
    <active>true</active>
    <label>Specialty Only</label>
</RecordType>